Update seluruh data peta yang digunakan

--- a/styles/libs/qgis2web.css
+++ b/styles/libs/qgis2web.css
@@ -7,8 +7,9 @@ html, body {
 }
 
 th, td {
-    vertical-align: top;
+    vertical-align: bottom;
     text-align: left;
+    white-space: nowrap;
 }
 
 #map {
